k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: capstone-app
  labels:
    name: capstone-app
    environment: production
